finished the form

--- a/gene_django/client/src/App.css
+++ b/gene_django/client/src/App.css
@@ -88,9 +88,46 @@ label{
   flex-direction: column;
   margin: 1em;
 }
+
+/* mutation page */
+
 .mutation_seq{
   letter-spacing: 0.5em;
 }
 
+.mutation_form{
+  display: flex;
+  flex-direction: column;
+}
 
+.form_mutation,
+.form_polar,
+.form_protonate{
+  height: 5em;
+  width: 50em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  text-align: center;
+}
 
+.submit-mutation{
+  width: 10em;
+  height: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  border-radius: 2em;
+  border-color: #58a8c0;
+  background-color: #9cd8df;
+}
+
+.submit-mutation:hover{
+  background-color: #42a1ac;
+}
+
+.the_mutations{
+  border-style: groove;
+}
