--- a/gene_django/client/src/App.css
+++ b/gene_django/client/src/App.css
@@ -27,6 +27,9 @@ body,
 .seq_link{
   text-decoration: none;
   color: #072e3a;
+  padding: 10em;
+  text-align:center;
+
 }
 .post_gene {
   display: flex;
@@ -79,8 +82,13 @@ label{
 .seq_render{
   border-style: groove;
   border-radius: 0.5em;
-  margin: 15px;
-  padding: 15px; 
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding: 10px;
+  max-width:min-content;
+  max-height: min-content;
 }
 
 .seq_text{
@@ -130,4 +138,11 @@ label{
 
 .the_mutations{
   border-style: groove;
+  max-width: fit-content;
+  max-height: fit-content;
+  padding: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
